# Rust-SGX-SDK_Bulid_Note

PSI_SampleCode/psi/: Cargo.toml  readme.md
PSI_SampleCode/psi/src/: argument.rs  lib.rs  main.rs  worker.rs  worker_remote.rs
PSI_SampleCode/psi/src/tests/: mod.rs
PSI_SampleCode/psi/testdata/: config.json  config.txt  d1_block1.txt  d1_block2.txt  d2_block1.txt  d2_block2.txt
samplecode/crypto/app/: app.c
samplecode/crypto/enclave/: Cargo.toml  Enclave.config.xml  Enclave.edl
samplecode/crypto/enclave/src/: lib.rs
samplecode/hello-rust/enclave/: Cargo.toml
samplecode/helloworld/enclave/: Cargo.toml
samplecode/helloworld/enclave/src/: lib.rs
samplecode/sealeddata/enclave/: Cargo.toml
tmpfile/: Cargo.toml
tmpfile/src/: fallback.rs  lib.rs  marker.rs  parse.rs  rcvec.rs  wrapper.rs
