[package]
name = "psi"
version = "0.1.0"
authors = ["JunJun <928595201@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#serde={version="=1.0.106",features=["derive"]}#好像serde_derive的依赖管理有问题 它会自动调用最新版本的proc-macro2 也有可能是间接依赖的问题
#serde={version="1.0.106",features=["derive"]}
serde={path="serde/serde",features=["derive"]}
#serde_derive={path="serde/serde_derive"}
serde_json="=1.0.51"
[patch.crates-io]
proc-macro2 = { git = "https://github.com/alexcrichton/proc-macro2", rev = "1.0.65" }
