[package]
name = "Cryptosampleenclave"
version = "1.0.0"
authors = ["The Teaclave Authors"]

[lib]
name = "cryptosampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
#[dependencies]

sgx_rand={path="../../../sgx_rand"}
sgx_types = {path="../../../sgx_types"}
sgx_trts = {path="../../../sgx_trts"}
sgx_tstd = {path="../../../sgx_tstd"}
sgx_tcrypto = {path="../../../sgx_tcrypto"}

[dependencies]
libsm={path="../../../libsm"}
lazy_static={path="../../../libsm/lazy-static.rs",default-features=false,features = ["spin_no_std"]}
num-bigint={path="../../../libsm/num-bigint-sgx"}

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_alloc = { path = "../../../sgx_alloc" }
sgx_backtrace = { path = "../../../sgx_backtrace" }
sgx_backtrace_sys = { path = "../../../sgx_backtrace_sys" }
sgx_build_helper = { path = "../../../sgx_build_helper" }
sgx_cov = { path = "../../../sgx_cov" }
sgx_crypto_helper = { path = "../../../sgx_crypto_helper" }
sgx_demangle = { path = "../../../sgx_demangle" }
sgx_libc = { path = "../../../sgx_libc" }
sgx_rand = { path = "../../../sgx_rand" }
sgx_rand_derive = { path = "../../../sgx_rand_derive" }
sgx_serialize = { path = "../../../sgx_serialize" }
sgx_serialize_derive = { path = "../../../sgx_serialize_derive" }
sgx_serialize_derive_internals = { path = "../../../sgx_serialize_derive_internals" }
sgx_tcrypto = { path = "../../../sgx_tcrypto" }
sgx_tcrypto_helper = { path = "../../../sgx_tcrypto_helper" }
sgx_tdh = { path = "../../../sgx_tdh" }
sgx_tkey_exchange = { path = "../../../sgx_tkey_exchange" }
sgx_tprotected_fs = { path = "../../../sgx_tprotected_fs" }
sgx_trts = { path = "../../../sgx_trts" }
sgx_tse = { path = "../../../sgx_tse" }
sgx_tseal = { path = "../../../sgx_tseal" }
sgx_tstd = { path = "../../../sgx_tstd" }
sgx_tunittest = { path = "../../../sgx_tunittest" }
sgx_types = { path = "../../../sgx_types" }
sgx_ucrypto = { path = "../../../sgx_ucrypto" }
sgx_unwind = { path = "../../../sgx_unwind" }
sgx_urts = { path = "../../../sgx_urts" }

[patch.'https://github.com/mesalock-linux/byteorder-sgx.git']
byteorder={path="../../../libsm/byteorder-sgx"}

[patch.'https://github.com/mesalock-linux/num-bigint-sgx.git']
num-bigint={path="../../../libsm/num-bigint-sgx"}

[patch.'https://github.com/mesalock-linux/num-integer-sgx.git']
num-integer={path="../../../libsm/num-bigint-sgx/num-integer-sgx"}

[patch.'https://github.com/mesalock-linux/num-traits-sgx.git']
num-traits={path="../../../libsm/num-bigint-sgx/num-traits-sgx"}


[dev-dependencies]
hex = "0.4"
base64 = "0.21"